--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,18 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <distributionManagement>
+<repository>
+<id>releases</id>
+<name>releases</name>
+<url>http://3.235.223.80:8081/repository/citi-releases/</url>
+</repository>
+<snapshotRepository>
+<id>snapshots</id>
+<name>snapshots</name>
+<url>http://3.235.223.80:8081/repository/citi-snapshots/</url>
+</snapshotRepository>
+</distributionManagement>
   </dependencies>
   <build>
     <finalName>sample-web</finalName>
